almost completed everthing , pending paginaton

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,14 +1,4 @@
 
-
-
-/* auth page */
-/* #login-right {
-    height: 100vh;
-    background-image: url('./assest/photos/authBg4.jpeg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-} */
 #login {
     background-image: url(./assest/others/bg-1.jpeg);
    
@@ -16,18 +6,15 @@
 #signup {
     background-image: url(./assest/others/bg-1.jpeg);
 }
-/* #signup-left {
-    height: 100vh;
-    background-image: url('./assest/photos/authBg1.jpeg');
-    background-repeat: no-repeat;
+
+#img-upload {
+    background-image: url('./assest//others/4880206.jpg');
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-} */
+    background-attachment: fixed;
+}
 
-
-/* navbar */
-
-/* #nav-logo {
-    background-image: url(./assest/icons/main-logo.png);
-    width: 100px;
-} */
+#img:hover #del-button {
+    opacity: 100%;
+}
